--- a/cadastro.css
+++ b/cadastro.css
@@ -1,6 +1,3 @@
-body {
-            background:linear-gradient(45deg, #4b00a0, #0f0118);
-        }
 
         #produto-form{
             display: flex;
@@ -11,7 +8,7 @@ body {
 
         h1 {
             text-align: center;
-            color: #580d9e;
+            color: #2c2c2c;
             font-size: 35px;
             font-family: "Wix Madefor Text", sans-serif;
         }
@@ -53,7 +50,7 @@ body {
             align-items: left;
             margin-bottom: 8px;
             font-weight: bold;
-            color: #4b00a0;
+            color: #2c2c2c;
             text-shadow: 4px;
             font-weight: bold;
             font-size: 20px;
@@ -67,7 +64,7 @@ body {
             width: 90%;
             padding: 10px;
             margin-bottom: 16px;
-            border: 1px solid #ecaeff;
+            border: 1px solid #2c2c2c;
             border-radius: 4px;
             box-sizing: border-box;
             font-size: 16px;
@@ -78,12 +75,12 @@ body {
         input[type="number"]:focus,
         textarea:focus,
         select:focus {
-            border-color: #8d02c4;
+            border-color: #2c2c2c;
             outline: none;
         }
 
         input[type="submit"] {
-            background: #580d9e;
+            background: #2c2c2c;
             color: white;
             padding: 12px 20px;
             border: none;
@@ -96,7 +93,7 @@ body {
         }
 
         input[type="submit"]:hover {
-            background: #390599;
+            background: #2c2c2c;
         }
 
         table {
@@ -114,7 +111,7 @@ body {
         }
 
         table th {
-            background-color: #580d9e;
+            background-color: #2c2c2c;
             color: white;
             text-transform: uppercase;
         }
@@ -142,7 +139,7 @@ body {
             display: inline-block;
             width: 100%;
             padding: 10px;
-            background: #580d9e;
+            background: #2c2c2c;
             color: white;
             text-align: center;
             border-radius: 4px;
